# mElo

./: .gitignore  CMakeLists.txt
assets/: readme.md
mElo/: CMakeLists.txt  main.cpp  main.h
mElo/all_games/: RPS.hpp  RPSLS.hpp  arbitrary.hpp  common.hpp
mElo/csv/: csv.hpp  json.hpp
mElo/mElo/: Number.hpp  construct_omega.cpp  construct_omega.hpp  mElo.cpp  math.hpp  predict.cpp  predict.hpp  types.hpp  update_c.cpp  update_c.hpp
